Build-Depend on libproperties-cpp-dev.

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: cmake,
                libgstreamer-plugins-base1.0-dev,
                libgstreamer1.0-dev,
                libgtest-dev,
+               libproperties-cpp-dev,
                libsqlite3-dev,
                qt5-default,
                qtbase5-dev,
