--- a/src/ms-dbus/CMakeLists.txt
+++ b/src/ms-dbus/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(ms-dbus STATIC
 )
 
 target_link_libraries(ms-dbus mediascanner ${DBUSCPP_LDFLAGS})
+# Compile with -fPIC, since this code is linked into the QML plugin.
 set_target_properties(ms-dbus PROPERTIES COMPILE_FLAGS "-fPIC")
 
 add_executable(mediascanner-dbus
