--- a/src/mediascanner/CMakeLists.txt
+++ b/src/mediascanner/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(mediascanner SHARED
   MediaFile.cc
   MediaFileBuilder.cc
   MediaFilePrivate.cc
+  MediaFilter.cc
   Album.cc
   MediaStore.cc
   utils.cc
