Add support for serialising/deserialising mediascanner::Filter with dbus-cpp.

--- a/src/mediascanner/CMakeLists.txt
+++ b/src/mediascanner/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(mediascanner SHARED
   MediaFile.cc
   MediaFileBuilder.cc
   MediaFilePrivate.cc
-  MediaFilter.cc
+  Filter.cc
   Album.cc
   MediaStore.cc
   utils.cc
