--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -51,8 +51,9 @@ add_executable(test_qml test_qml.cc)
 qt5_use_modules(test_qml QuickTest)
 target_link_libraries(test_qml mediascanner ${DBUSCPP_LDFLAGS})
 add_test(test_qml test_qml -input ${CMAKE_CURRENT_SOURCE_DIR}/qml -import ${CMAKE_BINARY_DIR}/src/qml)
-set_tests_properties(test_qml
-  PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=minimal")
+set_tests_properties(test_qml PROPERTIES
+  ENVIRONMENT "QT_QPA_PLATFORM=minimal"
+  TIMEOUT 600)
 
 add_executable(test_util test_util.cc ../src/daemon/util.cc)
 target_link_libraries(test_util gtest)
