--- a/src/ms-dbus/com.canonical.MediaScanner2.service.in
+++ b/src/ms-dbus/com.canonical.MediaScanner2.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=com.canonical.MediaScaner2
-Exec=@CMAKE_INSTALL_LIBDIR@/mediascanner-2.0/mediascanner-dbus-2.0
+Exec=@CMAKE_INSTALL_FULL_LIBDIR@/mediascanner-2.0/mediascanner-dbus-2.0
