--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -11,6 +11,6 @@ add_executable(scaletest scaletest.cc)
 target_link_libraries(scaletest mediascanner
 ${MEDIASCANNER_LDFLAGS})
 
-include_directories(${EXIF_INCLUDE_DIRS})
+include_directories(${EXIF_INCLUDE_DIRS} ${JPEG_INCLUDE_DIR})
 add_executable(imagetest imagetest.cc)
-target_link_libraries(imagetest ${EXIF_LDFLAGS})
+target_link_libraries(imagetest ${EXIF_LDFLAGS} ${JPEG_LIBRARIES})
