Add EXIF parsing code to MetadataExtractor, and also extract height and width from videos.

--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_definitions(${MEDIASCANNER_CFLAGS} ${GST_CFLAGS})
+add_definitions(${MEDIASCANNER_CFLAGS} ${GST_CFLAGS} ${EXIF_CFLAGS})
 include_directories(..)
 
 add_library(scannerstuff STATIC
@@ -9,7 +9,7 @@ add_library(scannerstuff STATIC
   ../mediascanner/utils.cc
 )
 
-target_link_libraries(scannerstuff ${GST_LIBRARIES})
+target_link_libraries(scannerstuff ${GST_LIBRARIES} ${EXIF_LDFLAGS})
 
 add_executable(scannerdaemon
   scannerdaemon.cc
