--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: cmake,
                libapparmor-dev,
                libdbus-1-dev,
                libdbus-cpp-dev (>= 3.0.0),
+               libexif-dev,
                libglib2.0-dev,
                libgstreamer-plugins-base1.0-dev,
                libgstreamer1.0-dev,
