Add an abstract base class shared by mediascanner::MediaStore and mediascanner::dbus::ServiceStub.

--- a/src/mediascanner/CMakeLists.txt
+++ b/src/mediascanner/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(mediascanner SHARED
   Filter.cc
   Album.cc
   MediaStore.cc
+  MediaStoreBase.cc
   utils.cc
   mozilla/fts3_porter.c
   mozilla/Normalize.c
@@ -34,6 +35,7 @@ install(FILES
   MediaFile.hh
   MediaFileBuilder.hh
   MediaStore.hh
+  MediaStoreBase.hh
   scannercore.hh
   DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/mediascanner-2.0/mediascanner"
 )
