--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -55,6 +55,12 @@ set_tests_properties(test_qml PROPERTIES
   ENVIRONMENT "QT_QPA_PLATFORM=minimal"
   TIMEOUT 600)
 
+add_test(test_qml_dbus test_qml -input ${CMAKE_CURRENT_SOURCE_DIR}/qml -import ${CMAKE_BINARY_DIR}/src/qml)
+set_tests_properties(test_qml_dbus PROPERTIES
+  ENVIRONMENT "QT_QPA_PLATFORM=minimal;MEDIASCANNER_QML_USE_DBUS=1"
+  TIMEOUT 600)
+
+
 add_executable(test_util test_util.cc ../src/mediascanner/utils.cc)
 target_link_libraries(test_util gtest ${GLIB_LDFLAGS})
 add_test(test_util test_util)
