Change environment variable name.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -57,7 +57,7 @@ set_tests_properties(test_qml PROPERTIES
 
 add_test(test_qml_dbus test_qml -input ${CMAKE_CURRENT_SOURCE_DIR}/qml -import ${CMAKE_BINARY_DIR}/src/qml)
 set_tests_properties(test_qml_dbus PROPERTIES
-  ENVIRONMENT "QT_QPA_PLATFORM=minimal;MEDIASCANNER_QML_USE_DBUS=1"
+  ENVIRONMENT "QT_QPA_PLATFORM=minimal;MEDIASCANNER_USE_DBUS=1"
   TIMEOUT 600)
 
 
