* add AppArmor profile (LP: #1319065)    - add debian/usr.bin.mediascanner-service-2.0    - debian/control: Build-Depends on dh-apparmor    - debian/rules: update override_dh_installdeb to use dh_apparmor    - debian/mediascanner2.0.dirs: add etc/apparmor.d    - debian/mediascanner2.0.install: install profile in to place

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: mediascanner2
 Section: libs
 Priority: optional
-Maintainer: Ubuntu Core Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 Standards-Version: 3.9.5
 Build-Depends: cmake,
                dbus,
@@ -23,6 +23,7 @@ Build-Depends: cmake,
                qtdeclarative5-dev-tools,
                qtdeclarative5-qtquick2-plugin,
                qtdeclarative5-test-plugin,
+               dh-apparmor,
 # For running unit tests
                gstreamer1.0-plugins-base,
                gstreamer1.0-plugins-good,
