--- a/debian/rules
+++ b/debian/rules
@@ -9,6 +9,11 @@ export DPKG_GENSYMBOLS_CHECK_LEVEL=4
 # http://ccache.samba.org/manual.html#_precompiled_headers
 export CCACHE_SLOPPINESS=time_macros
 
+# Explicitly selecting a G{CC,++}-version here to avoid accidental
+# ABI breaks introduced by toolchain updates.
+export CC=$(DEB_HOST_GNU_TYPE)-gcc-4.9
+export CXX=$(DEB_HOST_GNU_TYPE)-g++-4.9
+
 %:
 	dh $@ --parallel --fail-missing
 
