--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Ubuntu Core Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 Standards-Version: 3.9.5
 Build-Depends: cmake,
 # To avoid GCC 4.8/4.9 ABI break issues.
-               g++-4.9,
+               g++-4.9:native,
                dbus,
                debhelper (>= 9),
                libapparmor-dev,
