--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ option(full_warnings "All possible compiler warnings." OFF)
 include(FindPkgConfig)
 pkg_check_modules(MEDIASCANNER REQUIRED
   gio-2.0
-  sqlite3
+  sqlite3>=3.8.5
 )
 pkg_check_modules(GST gstreamer-1.0 gstreamer-pbutils-1.0 REQUIRED)
 pkg_check_modules(GLIB glib-2.0 REQUIRED)
