--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Build-Depends: cmake,
                libgstreamer1.0-dev,
                libgtest-dev,
                libproperties-cpp-dev,
-               libsqlite3-dev,
+               libsqlite3-dev (>= 3.8.5),
                qt5-default,
                qtbase5-dev,
                qtbase5-dev-tools,
