--- a/debian/control
+++ b/debian/control
@@ -65,6 +65,8 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends},
 Depends: libmediascanner-2.0-1 (= ${binary:Version}),
+         libsqlite3-dev,
+         libglib2.0-dev,
          ${misc:Depends},
 Description: Development files for libmediascanner
  This package provides the infrastructure for using the media scanner's
