--- a/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
+++ b/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
@@ -19,7 +19,7 @@ add_library(mediascanner-qml MODULE
 )
 
 set_target_properties(mediascanner-qml PROPERTIES AUTOMOC TRUE)
-qt5_use_modules(mediascanner-qml Qml Concurrent)
+qt5_use_modules(mediascanner-qml Qml Concurrent DBus)
 target_link_libraries(mediascanner-qml mediascanner ms-dbus)
 
 install(
