--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Build-Depends: cmake,
                libgtest-dev,
                libproperties-cpp-dev,
                libsqlite3-dev (>= 3.8.5),
+               libudisks2-dev,
                qt5-default,
                qtbase5-dev,
                qtbase5-dev-tools,
