--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ option(full_warnings "All possible compiler warnings." OFF)
 include(FindPkgConfig)
 pkg_check_modules(MEDIASCANNER REQUIRED
   gio-2.0
+  gio-unix-2.0
   sqlite3>=3.8.5
 )
 pkg_check_modules(GST gstreamer-1.0 gstreamer-pbutils-1.0 REQUIRED)
@@ -39,6 +40,7 @@ enable_testing()
 
 add_subdirectory(src/mediascanner)
 add_subdirectory(src/daemon)
+add_subdirectory(src/extractor)
 add_subdirectory(src/ms-dbus)
 add_subdirectory(src/qml/Ubuntu/MediaScanner)
 add_subdirectory(src/utils)
