Don't link mediascanner-service-2.0 to GStreamer of libexif. Fix a crasher bug in the error case of MetadataExtractor::extract().

--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_definitions(${MEDIASCANNER_CFLAGS} ${GST_CFLAGS} ${EXIF_CFLAGS} ${UDISKS_CFLAGS})
+add_definitions(${MEDIASCANNER_CFLAGS} ${UDISKS_CFLAGS})
 include_directories(..)
 
 add_library(scannerstuff STATIC
@@ -9,7 +9,7 @@ add_library(scannerstuff STATIC
   ../mediascanner/utils.cc
 )
 
-target_link_libraries(scannerstuff extractor-client ${GST_LIBRARIES} ${EXIF_LDFLAGS} ${UDISKS_LDFLAGS})
+target_link_libraries(scannerstuff extractor-client ${UDISKS_LDFLAGS})
 
 add_executable(scannerdaemon
   scannerdaemon.cc
