--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ endif()
 option(full_warnings "All possible compiler warnings." OFF)
 
 include(FindPkgConfig)
-pkg_check_modules(MEDIASCANNER REQUIRED
+pkg_check_modules(MEDIASCANNER_DEPS REQUIRED
   gio-2.0
   sqlite3>=3.8.5
 )
