--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,11 +1,11 @@
-add_definitions(${MEDIASCANNER_CFLAGS})
+add_definitions(${MEDIASCANNER_DEPS_CFLAGS})
 include_directories(..)
 
 add_executable(watcher watchertest.cc)
 
 add_executable(query query.cc)
 target_link_libraries(query mediascanner
-${MEDIASCANNER_LDFLAGS})
+${MEDIASCANNER_DEPS_LDFLAGS})
 
 add_executable(mountwatcher mountwatcher.cc)
 target_link_libraries(mountwatcher scannerstuff)
