Add lsb-release to build-depends.

--- a/debian/control.in
+++ b/debian/control.in
@@ -19,6 +19,7 @@ Build-Depends: cmake,
                libproperties-cpp-dev,
                libsqlite3-dev (>= 3.8.5),
                libudisks2-dev,
+               lsb-release,
                qt5-default,
                qtbase5-dev,
                qtbase5-dev-tools,
