--- a/debian/control
+++ b/debian/control
@@ -81,6 +81,19 @@ Description: Development files for libmediascanner
 
 Package: qtdeclarative5-ubuntu-mediascanner0.1
 Architecture: any
+Multi-Arch: same
+Section: oldlibs
+Depends: qml-module-ubuntu-mediascanner0.1,
+         ${misc:Depends},
+Description: transitional dummy package for QML plugin for the Ubuntu Media Scanner
+ This package provides components that allow access to the media
+ scanner index from Qt Quick 2 / QML applications.
+ .
+ This is a transitional dummy package for qml-module-ubuntu-mediascanner0.1
+ which can be safely removed.
+
+Package: qml-module-ubuntu-mediascanner0.1
+Architecture: any
 Pre-Depends: ${misc:Pre-Depends},
 Depends: mediascanner2.0 (= ${binary:Version}),
          ${misc:Depends},
