--- a/debian/control.in
+++ b/debian/control.in
@@ -52,6 +52,7 @@ Description: Access library for the media scanner's index
 
 Package: mediascanner2.0
 Architecture: any
+Multi-Arch: foreign
 Pre-Depends: ${misc:Pre-Depends},
 Depends: gstreamer1.0-plugins-base,
          gstreamer1.0-plugins-good,
@@ -76,6 +77,20 @@ Description: Development files for libmediascanner
 
 Package: qtdeclarative5-ubuntu-mediascanner0.1
 Architecture: any
+Multi-Arch: same
+Section: oldlibs
+Depends: qml-module-ubuntu-mediascanner0.1,
+         ${misc:Depends},
+Description: transitional dummy package for QML plugin for the Ubuntu Media Scanner
+ This package provides components that allow access to the media
+ scanner index from Qt Quick 2 / QML applications.
+ .
+ This is a transitional dummy package for qml-module-ubuntu-mediascanner0.1
+ which can be safely removed.
+
+Package: qml-module-ubuntu-mediascanner0.1
+Architecture: any
+Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends},
 Depends: mediascanner2.0 (= ${binary:Version}),
          ${misc:Depends},
