Move the mediascanner-service-2.0 executable out of /usr/bin, since it is not intended to be executed directly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,9 @@ install(FILES ${CMAKE_CURRENT_BINARY_DIR}/mediascanner-2.0.pc
   DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
 
 # Install Upstart user session job
+configure_file(mediascanner-2.0.conf.in mediascanner-2.0.conf)
 install(
-  FILES mediascanner-2.0.conf
+  FILES ${CMAKE_CURRENT_BINARY_DIR}/mediascanner-2.0.conf
   DESTINATION ${CMAKE_INSTALL_DATADIR}/upstart/sessions
 )
 
