--- a/mediascanner-2.0.conf.in
+++ b/mediascanner-2.0.conf.in
@@ -4,4 +4,4 @@ author "James Henstridge <james.henstridge@canonical.com>"
 start on started dbus
 
 respawn
-exec mediascanner-service-2.0
+exec @CMAKE_INSTALL_FULL_LIBDIR@/mediascanner-2.0/mediascanner-service-2.0
