Update D-Bus API to handle extra fields on DetectedFile and MediaFile.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -47,7 +47,7 @@ target_link_libraries(test_extractorbackend extractor-backend gtest)
 add_test(test_extractorbackend test_extractorbackend)
 
 add_executable(test_metadataextractor test_metadataextractor.cc)
-target_link_libraries(test_metadataextractor extractor-client gtest)
+target_link_libraries(test_metadataextractor extractor-client gtest ${GST_LDFLAGS})
 add_test(test_metadataextractor test_metadataextractor)
 # The gvfs modules interfere with the private D-Bus test fixtures
 set_tests_properties(test_metadataextractor PROPERTIES
