--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -53,6 +53,13 @@ add_test(test_metadataextractor test_metadataextractor)
 set_tests_properties(test_metadataextractor PROPERTIES
   ENVIRONMENT "GIO_MODULE_DIR=${CMAKE_CURRENT_BINARY_DIR}/modules")
 
+add_executable(test_subtreewatcher test_subtreewatcher.cc)
+target_link_libraries(test_subtreewatcher mediascanner scannerstuff gtest)
+add_test(test_subtreewatcher test_subtreewatcher)
+# The gvfs modules interfere with the private D-Bus test fixtures
+set_tests_properties(test_subtreewatcher PROPERTIES
+  ENVIRONMENT "GIO_MODULE_DIR=${CMAKE_CURRENT_BINARY_DIR}/modules")
+
 add_executable(test_sqliteutils test_sqliteutils.cc)
 target_link_libraries(test_sqliteutils gtest ${MEDIASCANNER_DEPS_LDFLAGS})
 add_test(test_sqliteutils test_sqliteutils)
