--- a/src/extractor/CMakeLists.txt
+++ b/src/extractor/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_definitions(${MEDIASCANNER_DEPS_CFLAGS} ${GST_CFLAGS} ${EXIF_CFLAGS} ${PIXBUF_CFLAGS})
+add_definitions(${MEDIASCANNER_DEPS_CFLAGS} ${GST_CFLAGS} ${EXIF_CFLAGS} ${PIXBUF_CFLAGS} ${TAGLIB_CFLAGS})
 include_directories(.. ${CMAKE_CURRENT_BINARY_DIR})
 
 # Build stubs/skeletons for D-Bus interface
@@ -34,12 +34,14 @@ add_library(extractor-backend STATIC
   ExtractorBackend.cc
   GStreamerExtractor.cc
   ImageExtractor.cc
+  TaglibExtractor.cc
 )
 target_link_libraries(extractor-backend
   extractor-client
   ${GST_LDFLAGS}
   ${EXIF_LDFLAGS}
   ${PIXBUF_LDFLAGS}
+  ${TAGLIB_LDFLAGS}
 )
 
 add_executable(mediascanner-extractor
