build-depend on libtag1-dev.

--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,7 @@ Build-Depends: cmake,
                libgtest-dev,
                libproperties-cpp-dev,
                libsqlite3-dev (>= 3.8.5),
+               libtag1-dev,
                libudisks2-dev,
                lsb-release,
                qtbase5-dev,
