Split volume management out from ScannerDaemon class into its own class.

--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -4,6 +4,7 @@ include_directories(..)
 add_library(scannerstuff STATIC
   InvalidationSender.cc
   MountWatcher.cc
+  VolumeManager.cc
   SubtreeWatcher.cc
   Scanner.cc
   ../mediascanner/utils.cc
