SystemD doesn't like the $SNAP part, also tell it about our dbus info

--- a/mediascanner-2.0.service.in
+++ b/mediascanner-2.0.service.in
@@ -3,5 +3,7 @@ Description=Media Scanner
 PartOf=graphical-session.target
 
 [Service]
-ExecStart=$SNAP@CMAKE_INSTALL_FULL_BINDIR@/mediascanner-service-2.0
+Type=dbus
+BusName=com.canonical.MediaScanner2.Daemon
+ExecStart=@CMAKE_INSTALL_FULL_BINDIR@/mediascanner-service-2.0
 Restart=on-failure
