Use find_GMock from cmake-extras
This also removes the hacky own impl of get gmock

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,21 +1,8 @@
-if (NOT DEFINED GTEST_ROOT)
-    set(GTEST_ROOT /usr/src/gtest)
-endif()
+find_package(GMock REQUIRED)
 
-set(GTEST_SRC_DIR "${GTEST_ROOT}/src")
-set(GTEST_INCLUDE_DIR ${GTEST_ROOT})
-
-add_library(gtest STATIC
-${GTEST_SRC_DIR}/gtest-all.cc
+set(TEST_LIBS
+  ${GTEST_BOTH_LIBRARIES}
 )
-
-set_target_properties(gtest PROPERTIES INCLUDE_DIRECTORIES ${GTEST_INCLUDE_DIR})
-target_link_libraries(gtest ${CMAKE_THREAD_LIBS_INIT})
-
-# Clang complains about unused private field 'pretty_' in gtest-internal-inl.h.
-if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    set_target_properties(gtest PROPERTIES COMPILE_FLAGS "-Wno-unused-private-field")
-endif()
 
 add_definitions(${MEDIASCANNER_DEPS_CFLAGS} ${GST_CFLAGS} ${DBUSCPP_CFLAGS} -DQT_NO_KEYWORDS)
 include_directories(../src)
@@ -32,51 +19,51 @@ configure_file(
   services/com.canonical.MediaScanner2.Extractor.service)
 
 add_executable(basic basic.cc)
-target_link_libraries(basic mediascanner scannerstuff gtest)
+target_link_libraries(basic mediascanner scannerstuff ${TEST_LIBS})
 add_test(basic basic)
 # The gvfs modules interfere with the private D-Bus test fixtures
 set_tests_properties(basic PROPERTIES
   ENVIRONMENT "GIO_MODULE_DIR=${CMAKE_CURRENT_BINARY_DIR}/modules")
 
 add_executable(test_mediastore test_mediastore.cc ../src/mediascanner/utils.cc)
-target_link_libraries(test_mediastore mediascanner gtest)
+target_link_libraries(test_mediastore mediascanner ${TEST_LIBS})
 add_test(test_mediastore test_mediastore)
 
 add_executable(test_extractorbackend test_extractorbackend.cc)
-target_link_libraries(test_extractorbackend extractor-backend gtest)
+target_link_libraries(test_extractorbackend extractor-backend ${TEST_LIBS})
 add_test(test_extractorbackend test_extractorbackend)
 
 add_executable(test_metadataextractor test_metadataextractor.cc)
-target_link_libraries(test_metadataextractor extractor-client gtest)
+target_link_libraries(test_metadataextractor extractor-client ${TEST_LIBS})
 add_test(test_metadataextractor test_metadataextractor)
 # The gvfs modules interfere with the private D-Bus test fixtures
 set_tests_properties(test_metadataextractor PROPERTIES
   ENVIRONMENT "GIO_MODULE_DIR=${CMAKE_CURRENT_BINARY_DIR}/modules")
 
 add_executable(test_subtreewatcher test_subtreewatcher.cc)
-target_link_libraries(test_subtreewatcher mediascanner scannerstuff gtest)
+target_link_libraries(test_subtreewatcher mediascanner scannerstuff ${TEST_LIBS})
 add_test(test_subtreewatcher test_subtreewatcher)
 # The gvfs modules interfere with the private D-Bus test fixtures
 set_tests_properties(test_subtreewatcher PROPERTIES
   ENVIRONMENT "GIO_MODULE_DIR=${CMAKE_CURRENT_BINARY_DIR}/modules")
 
 add_executable(test_volumemanager test_volumemanager.cc)
-target_link_libraries(test_volumemanager mediascanner scannerstuff gtest)
+target_link_libraries(test_volumemanager mediascanner scannerstuff ${TEST_LIBS})
 add_test(test_volumemanager test_volumemanager)
 # The gvfs modules interfere with the private D-Bus test fixtures
 set_tests_properties(test_volumemanager PROPERTIES
   ENVIRONMENT "GIO_MODULE_DIR=${CMAKE_CURRENT_BINARY_DIR}/modules")
 
 add_executable(test_sqliteutils test_sqliteutils.cc)
-target_link_libraries(test_sqliteutils gtest ${MEDIASCANNER_DEPS_LDFLAGS})
+target_link_libraries(test_sqliteutils ${TEST_LIBS} ${MEDIASCANNER_DEPS_LDFLAGS})
 add_test(test_sqliteutils test_sqliteutils)
 
 add_executable(test_mfbuilder test_mfbuilder.cc)
-target_link_libraries(test_mfbuilder gtest mediascanner)
+target_link_libraries(test_mfbuilder ${TEST_LIBS} mediascanner)
 add_test(test_mfbuilder test_mfbuilder)
 
 add_executable(test_dbus test_dbus.cc)
-target_link_libraries(test_dbus gtest mediascanner ms-dbus)
+target_link_libraries(test_dbus ${TEST_LIBS} mediascanner ms-dbus)
 add_test(test_dbus test_dbus)
 
 add_executable(test_qml test_qml.cc)
@@ -99,5 +86,5 @@ set_tests_properties(test_qml_nodb PROPERTIES
 
 
 add_executable(test_util test_util.cc ../src/mediascanner/utils.cc)
-target_link_libraries(test_util gtest ${GLIB_LDFLAGS})
+target_link_libraries(test_util ${TEST_LIBS} ${GLIB_LDFLAGS})
 add_test(test_util test_util)
