Add google-mock to build-depends

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: cmake,
                cmake-extras (>= 0.10),
                dbus,
                debhelper (>= 9),
+               google-mock,
                libapparmor-dev,
                libdbus-1-dev,
                libdbus-cpp-dev (>= 4.0.0),
@@ -22,12 +23,12 @@ Build-Depends: cmake,
                libtag1-dev,
                libudisks2-dev,
                lsb-release,
+               qml-module-qtquick2,
+               qml-module-qttest,
                qtbase5-dev,
                qtbase5-dev-tools,
                qtdeclarative5-dev,
                qtdeclarative5-dev-tools,
-               qtdeclarative5-qtquick2-plugin,
-               qtdeclarative5-test-plugin,
                dh-apparmor,
 # For running unit tests
                gstreamer1.0-plugins-base,
