General build and code cleanups (#4)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ if(PROJECT_BINARY_DIR STREQUAL PROJECT_SOURCE_DIR)
   message(FATAL_ERROR "In-tree build attempt detected, aborting. Set your build dir outside your source dir, delete CMakeCache.txt from source root and try again.")
 endif()
 
-option(full_warnings "All possible compiler warnings." OFF)
+option(FULL_WARNINGS "All possible compiler warnings." OFF)
+option(ENABLE_TESTS "Enable tests" ON)
 
 include(FindPkgConfig)
 pkg_check_modules(MEDIASCANNER_DEPS REQUIRED
@@ -32,7 +33,7 @@ find_package(Qt5Core REQUIRED)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -pedantic -Wextra -std=c99")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -std=c++11")
-if(${full_warnings})
+if(${FULL_WARNINGS})
 # C does not have any more warning flags.
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weffc++")
 endif()
@@ -40,15 +41,16 @@ find_package(CoverageReport)
 
 include(GNUInstallDirs)
 set(LIBDIR $CMAKE_INSTALL_LIBDIR)
-enable_testing()
 
-add_subdirectory(src/mediascanner)
-add_subdirectory(src/extractor)
-add_subdirectory(src/daemon)
-add_subdirectory(src/ms-dbus)
-add_subdirectory(src/qml/Ubuntu/MediaScanner.0.1)
-add_subdirectory(src/utils)
-add_subdirectory(test)
+add_subdirectory(src)
+
+if(ENABLE_TESTS)
+  message("Tests enabled")
+  enable_testing()
+  add_subdirectory(test)
+else()
+  message(WARNING "Tests disabled")
+endif()
 
 # Install pkg-config file
 configure_file(mediascanner-2.0.pc.in mediascanner-2.0.pc)
